<resources>
    <string name="app_name">Therappy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_therappy_help">Help using Therappy</string>
	<string name="action_settings">Settings</string>

	<string-array name="drawer_items_array">
		<item>Main Screen</item>
		<item>Log Moods</item>
		<item>Find Patterns</item>
		<item>Get Help</item>
		<item>Edit Moods</item>
	</string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="get_help_title">Get Help</string>
	<string name="edit_moods_title">Edit Moods</string>
	<string name="find_patterns_title">Find Patterns</string>
	<string name="log_moods_title">Log Moods</string>
	<string name="therappy_help_title">Therappy Help</string>
	<string name="therappy_preferences_title">Therappy Preferences</string>

	<string name="back_button_text">Back</string>
	<string name="finish_button_text">Finish</string>
	<string name="next_button_text">Next</string>

	<string name="moods_title">Select Mood</string>
	<string name="triggers_title">Select Trigger</string>
	<string name="beliefs_title">Select Belief</string>
	<string name="behaviors_title">Select Behavior</string>

	<!-- The behavior tree -->
	<string-array name="behaviors">
		<item>behaviors</item>
		<item>link:behaviors_goingOut</item>
		<item>link:behaviors_stayingIn</item>
	</string-array>

	<string-array name="behaviors_goingOut">
		<item>Going out</item>
		<item>To a bar</item>
		<item>To a park</item>
		<item>To a restaurant</item>
		<item>To a friend\'s house</item>
		<item>For a run</item>
	</string-array>

	<string-array name="behaviors_stayingIn">
		<item>Staying in</item>
		<item>Watching TV</item>
		<item>Eating</item>
		<item>Playing Video Games</item>
		<item>Reading a Book</item>
		<item>Taking a Shower</item>
	</string-array>

	<!-- The belief tree -->
	<string-array name="beliefs">
		<item>beliefs</item>
		<item>link:beliefs_positive</item>
		<item>link:beliefs_negative</item>
	</string-array>

	<string-array name="beliefs_positive">
		<item>Positive</item>
		<item>Awesome</item>
		<item>Successful</item>
		<item>Independent</item>
		<item>Loved</item>
	</string-array>

	<string-array name="beliefs_negative">
		<item>Negative</item>
		<item>Terrible</item>
		<item>Unsuccessful</item>
		<item>Hopeless</item>
		<item>Alone</item>
	</string-array>

	<string-array name="moods">
		<item>moods</item>
		<item>link:moods_happinessRelated</item>
		<item>link:moods_sadnessRelated</item>
		<item>link:moods_fearRelated</item>
		<item>link:moods_shameRelated</item>
	</string-array>

	<string-array name="moods_happinessRelated">
		<item>Happiness-related</item>
		<item>Ecstatic</item>
		<item>Excited</item>
		<item>Giddy</item>
		<item>Joyful</item>
		<item>Happy</item>
		<item>Hopeful</item>
		<item>Optimistic</item>
		<item>Silly</item>
		<item>Satisfied</item>
		<item>Pleased</item>
		<item>Playful</item>
		<item>Content</item>
		<item>Calm</item>
		<item>Peaceful</item>
		<item>Relaxed</item>
	</string-array>

	<string-array name="moods_sadnessRelated">
		<item>Sadness-related</item>
		<item>Despondent</item>
		<item>Hopeless</item>
		<item>Depressed</item>
		<item>Crushed</item>
		<item>Sad</item>
		<item>Regretful</item>
		<item>Brooding</item>
		<item>Apathetic</item>
		<item>Gloomy</item>
		<item>Pessimistic</item>
		<item>Numb</item>
		<item>Overwhelmed</item>
		<item>Intimidated</item>
		<item>Stressed</item>
		<item>Restless</item>
		<item>Lonely</item>
	</string-array>

	<string-array name="moods_fearRelated">
		<item>Fear-related</item>
		<item>Terrified</item>
		<item>Panicky</item>
		<item>Afraid</item>
		<item>Scared</item>
		<item>Anxious</item>
		<item>Apprehensive</item>
		<item>Tense</item>
		<item>Nervous</item>
		<item>Envious</item>
		<item>Jealous</item>
		<item>Confused</item>
	</string-array>

	<string-array name="moods_shameRelated">
		<item>Shame-related</item>
		<item>Conceited</item>
		<item>Proud</item>
		<item>Embarrassed</item>
		<item>Ashamed</item>
	</string-array>

	<string-array name="triggers">
		<item>Triggers</item>
		<item>link:triggers_socialInteraction</item>
		<item>link:triggers_workSchoolEvents</item>
		<item>link:triggers_lossRelated</item>
	</string-array>

	<string-array name="triggers_socialInteraction">
		<item>Social interaction</item>
		<item>link:triggers_socialInteraction_workRelated</item>
		<item>link:triggers_socialInteraction_friendRelated</item>
		<item>link:triggers_socialInteraction_familyRelated</item>
		<item>link:triggers_socialInteraction_partnerRelated</item>
	</string-array>

	<string-array name="triggers_socialInteraction_workRelated">
		<item>Work-related</item>
		<item>link:triggers_socialInteraction_workRelated_positive</item>
		<item>link:triggers_socialInteraction_workRelated_negative</item>
	</string-array>

	<string-array name="triggers_socialInteraction_workRelated_positive">
		<item>Positive</item>
		<item>Interaction with Boss</item>
		<item>Interaction with Peer</item>
		<item>Interaction with Subordinate</item>
	</string-array>

	<string-array name="triggers_socialInteraction_workRelated_negative">
		<item>Negative</item>
		<item>Interaction with Boss</item>
		<item>Interaction with Peer</item>
		<item>Interaction with Subordinate</item>
	</string-array>

	<string-array name="triggers_socialInteraction_friendRelated">
		<item>Friend-related</item>
		<item>Positive</item>
		<item>Negative</item>
	</string-array>

	<string-array name="triggers_socialInteraction_familyRelated">
		<item>Family-related</item>
		<item>Positive</item>
		<item>Negative</item>
	</string-array>

	<string-array name="triggers_socialInteraction_partnerRelated">
		<item>Partner-related</item>
		<item>Positive</item>
		<item>Negative</item>
	</string-array>

	<string-array name="triggers_workSchoolEvents">
		<item>Work-School Events</item>
		<item>Positive</item>
		<item>Negative</item>
	</string-array>

	<string-array name="triggers_lossRelated">
		<item>Loss-related</item>
		<item>Positive</item>
		<item>Negative</item>
	</string-array>

	<!-- findpatterns strings -->
    <string name="find_patterns_1">Select Data Format to Explore</string>
    <string name="find_patterns_2">Select Up to 5 Moods</string>
    <string name="find_patterns_data1">Intensity Of Moods</string>
    <string name="find_patterns_data2">Frequency Of Moods</string>
    <string name="find_patterns_data3">Beliefs by Moods</string>
    <string name="find_patterns_data4">Triggers by Moods</string>
    <string name="find_patterns_data5">Behaviors by Moods</string>


</resources>
