<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.jjclade.therappy.FindPatterns">

    <!-- TODO: Update blank fragment layout -->

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/find_patterns_title"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <!-- Mood Diagram -->

    <ImageView
        android:layout_width="302dp"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:src="@drawable/mood_diagram"
        android:layout_below="@+id/textView3"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_patterns_1"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <!-- Options for FindPatterns -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2">

        <Button	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:text="@string/find_patterns_data1"
            android:id="@+id/data1_button"
            android:layout_weight=".5"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/data2_button"
            android:layout_below="@+id/data1_button"
            android:text="@string/find_patterns_data2"
            android:layout_alignParentLeft="true"
            android:layout_weight=".5" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data2_button"
            android:text="@string/find_patterns_data3"
            android:id="@+id/data3_button"
            android:layout_alignParentLeft="true"
            android:layout_weight=".5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data3_button"
            android:text="@string/find_patterns_data4"
            android:id="@+id/data4_button"
            android:layout_alignParentLeft="true"
            android:layout_weight=".5" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data4_button"
            android:text="@string/find_patterns_data5"
            android:id="@+id/data5_button"
            android:layout_alignParentLeft="true"
            android:layout_weight=".5" />
    </RelativeLayout>




</RelativeLayout>
