<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jjclade.therappy.LogMoods"
    android:id="@+id/log_moods_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_moods_title"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <ImageView
        android:layout_width="302dp"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:src="@drawable/mood_diagram"
        android:layout_below="@+id/textView3"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewMoods"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        tools:listitem="@android:layout/simple_list_item_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beliefs_title"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_button_text"
            android:id="@+id/finish_button"
            android:clickable="false"
            android:layout_weight=".5"
            android:layout_alignParentLeft="true" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            android:id="@+id/next_button"
            android:layout_alignParentRight="true"
            android:layout_weight=".5" />
    </LinearLayout>

</RelativeLayout>
